Fix deprecation warning.